--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
    	
     <body>
     	<h1>Welcome to my first page</h1>
-    	<img src = "images/mypic.jpg" width="240" height="240" alt="My test image">
+    	<figure>
+        <img src = "images/mypic.jpg" width="240" height="240" alt="My test image">
+        <figcaption>KKU Picture</figcaption>
+        </figure>
     	<p>My name is Wittawat Rienrungroj  I’m a student in <a href="https://www.en.kku.ac.th/web/coe/" >Department of Computer Engineering</a> <a href="https://www.en.kku.ac.th">Faculty of Engineering</a> <a href="http://www.kku.ac.th">Khon Kaen University</a> These are <a href="#name_q">my favorite quotes.</a></p> 
         <h2>My courses</h2>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;1. 198420: EMBEDDED SYSTEMSS</p>
