--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     	<h1>Welcome to my first page</h1>
     	<figure>
         <img src = "images/mypic.jpg" width="240" height="240" alt="My test image">
-        <figcaption>KKU Picture</figcaption>
+        <figcaption><a href=”http://www.kku.ac.th">KKU Picture</a></figcaption>
         </figure>
     	<p>My name is Wittawat Rienrungroj  I’m a student in <a href="https://www.en.kku.ac.th/web/coe/" >Department of Computer Engineering</a> <a href="https://www.en.kku.ac.th">Faculty of Engineering</a> <a href="http://www.kku.ac.th">Khon Kaen University</a> These are <a href="#name_q">my favorite quotes.</a></p> 
         <h2>My courses</h2>
